--- a/archivo.html
+++ b/archivo.html
@@ -10,5 +10,6 @@
     <h1>Zi</h1>
     <h2> Esto es una prueba <h2>
     <h2> Esto es una prueba 2 <h2>
+    <h2> Esto es una prueba desde la segunda cuenta <h2>
 </body>
 </html>
